refactor, fix docker-compose, add migration
