# internal/delivery/http/docs/swagger.json
@@ -51,6 +51,44 @@
                     }
                 }
             },
+            "put": {
+                "description": "Update recipe",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "aggregator"
+                ],
+                "summary": "Update recipe",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateRecipeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateRecipeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorBadRequest"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create recipe",
                 "consumes": [
@@ -65,7 +103,7 @@
                 "summary": "Create recipe",
                 "parameters": [
                     {
-                        "description": "limit",
+                        "description": "data",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -157,7 +195,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.CulinaryAggregator"
+                                "$ref": "#/definitions/models.DeleteRecipeResponse"
                             }
                         }
                     },
@@ -173,6 +211,23 @@
     },
     "definitions": {
         "models.CookingSteps": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "order_number": {
+                    "type": "integer"
+                },
+                "recipe_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CookingStepsUpdate": {
             "type": "object",
             "properties": {
                 "description": {
@@ -273,6 +328,14 @@
                 }
             }
         },
+        "models.DeleteRecipeResponse": {
+            "type": "object",
+            "properties": {
+                "succress": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.ErrorBadRequest": {
             "type": "object",
             "properties": {
@@ -285,6 +348,23 @@
             }
         },
         "models.Ingredients": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "number"
+                },
+                "dimension": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.IngredientsUpdate": {
             "type": "object",
             "properties": {
                 "count": {
@@ -318,6 +398,48 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "models.RecipeUpdate": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "guid": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateRecipeRequest": {
+            "type": "object",
+            "properties": {
+                "cooking_steps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CookingStepsUpdate"
+                    }
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.IngredientsUpdate"
+                    }
+                },
+                "recipe": {
+                    "$ref": "#/definitions/models.RecipeUpdate"
+                }
+            }
+        },
+        "models.UpdateRecipeResponse": {
+            "type": "object",
+            "properties": {
+                "succress": {
+                    "type": "boolean"
                 }
             }
         }
